--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="bluestyle.css">
 <title>helloworld</title>
 </head>
